# py-semantic-taxonomy

./: CHANGES.md  README.md  mkdocs.yml  pyproject.toml  start_typesense_container.py
.github/workflows/: python-test.yml
docs/: 404.html  CNAME  images.key  index.html  sitemap.xml
docs-src/: architecture.md  common-workflows.md  data-model.md  development.md  images.key  index.md
docs/api/: index.html  openapi.json  openapi.yaml
docs/architecture/: index.html
docs/common-workflows/: index.html
docs/data-model/: index.html
docs/development/: index.html
docs/search/: search_index.json
examples/: PyST basic demo.ipynb
scripts/: export_openapi_spec.py  start_postgres_container.py  start_typesense_container.py  write_docs.sh  write_redoc.sh
src/py_semantic_taxonomy/: __init__.py  app.py  cfg.py
src/py_semantic_taxonomy/adapters/persistence/: __init__.py  database.py  engine.py  graph.py  search_engine.py  session.py  tables.py
src/py_semantic_taxonomy/adapters/persistence/sql/: broader_concept_hierarchy.sql
src/py_semantic_taxonomy/adapters/routers/: api_router.py  dependencies.py  request_dto.py  response_dto.py  router.py  validation.py  web_router.py
src/py_semantic_taxonomy/application/: graph_service.py  search_service.py  services.py
src/py_semantic_taxonomy/domain/: constants.py  entities.py  ports.py
tests/: conftest.py
tests/fixtures/: change_note.ttl  child-concept.jsonld  cn.ttl  concept-scheme.jsonld  top-concept.jsonld
tests/integration/: test_association_api.py  test_concept_api.py  test_correspondence_api.py  test_cs_api.py  test_redirection_api.py  test_relationships_api.py  test_search_api.py  test_status_api.py
tests/unit/application/: test_association_services.py  test_concept_services.py  test_correspondence_services.py  test_cs_services.py  test_relationship_services.py  test_search_service.py  test_services.py
tests/unit/domain/: test_association_entities.py  test_concept_entities.py  test_correspondence_entities.py  test_cs_entities.py  test_entities.py  test_made_of_entities.py  test_relationship_entities.py  test_search_entities.py  test_url_utils.py
tests/unit/persistence/: test_graph_association.py  test_graph_concept.py  test_graph_correspondence.py  test_graph_cs.py  test_graph_indexing.py  test_graph_relationship.py  test_search_engine.py
tests/unit/routers/: test_concept_scheme_validation.py  test_concept_validation.py  test_router.py  test_validation_kos_common.py  test_validation_utils.py
tests/unit/routers/association/: test_association_router.py  test_association_validation.py
tests/unit/routers/concept_schemes/: test_cs_router.py  test_cs_validation.py
tests/unit/routers/concepts/: test_concept_router.py  test_concept_router_interfaces.py  test_concept_router_logic.py  test_concept_validation.py
tests/unit/routers/correspondence/: test_correspondence_router.py  test_correspondence_validation.py
tests/unit/routers/relationships/: test_relationship_router.py  test_relationship_validation.py
(+7 files in other folders)
